--- a/wtmi/Makefile
+++ b/wtmi/Makefile
@@ -51,6 +51,22 @@ ASRC = $(wildcard *.S)
 COBJ   = $(CSRC:.c=.o)
 AOBJ   = $(ASRC:.S=.o)
 
+WTMI_DDR_PATH = ../ddr/wtmi_ddr
+WTMI_DDR_LIB  = $(WTMI_DDR_PATH)/wtmi_ddr.a
+
+CLOCKSPRESET		?= CPU_800_DDR_800
+DDR_TOPOLOGY		?= 0
+
+ifeq ($(CLOCKSPRESET), CPU_600_DDR_600)
+		WTMI_CLOCK = 0
+else ifeq ($(CLOCKSPRESET), CPU_800_DDR_800)
+		WTMI_CLOCK = 1
+else ifeq ($(CLOCKSPRESET), CPU_1000_DDR_800)
+		WTMI_CLOCK = 2
+else ifeq ($(CLOCKSPRESET), CPU_1200_DDR_750)
+		WTMI_CLOCK = 3
+endif
+
 COMPILER_FOUND  = $(shell which $(CC))
 TOOLCHAIN_CHECK = \
 	if [ -z "$(COMPILER_FOUND)" ]; then \
@@ -71,9 +87,9 @@ TOOLCHAIN_CHECK = \
 
 .SILENT:
 
-all: tools $(COBJ) $(AOBJ) $(BINPATH)
+all: tools wtmiddr $(COBJ) $(AOBJ) $(BINPATH)
 	$(ECHO) "  LD    $(MAKECMDGOALS)"
-	$(CC) $(LDFLAGS)  $(AOBJ)  $(COBJ) -o $(BINPATH)/wtmi.elf
+	$(CC) $(LDFLAGS)  $(AOBJ)  $(COBJ) $(WTMI_DDR_LIB) -o $(BINPATH)/wtmi.elf
 	$(OBJCOPY) -S -O binary $(BINPATH)/wtmi.elf $(BINPATH)/wtmi.bin
 	@if [ `uname -m` = "x86_64" ]; then $(OBJDUMP) -D -S $(BINPATH)/wtmi.elf > $(BINPATH)/wtmi.dis; fi
 
@@ -92,6 +108,10 @@ clean:
 	$(ECHO) "  CLEAN"
 	@$(RM) -rf $(BINPATH)
 	@$(RM) -f *.o *.elf *.bin *dis
+	@${Q}${MAKE} --no-print-directory -C $(WTMI_DDR_PATH) clean
 
 tools:
 	@$(TOOLCHAIN_CHECK)
+
+wtmiddr:
+	${MAKE} -C $(WTMI_DDR_PATH) DEBUG=$(DEBUG) WTMI_CLOCK=$(WTMI_CLOCK) DDR_TOPOLOGY=$(DDR_TOPOLOGY)
