--- a/wtmi/Makefile
+++ b/wtmi/Makefile
@@ -101,11 +101,13 @@ all: tools wtmiddr $(COBJ) $(AOBJ) $(BINPATH)
 
 %.o: %.c
 	$(ECHO) "  CC    $<"
-	$(CC) -c $(CFLAGS) $(CPPFLAGS) -o $@ $(subst .o,.c,$@)
+	$(CC) -MMD -MP -c $(CFLAGS) $(CPPFLAGS) -o $@ $(subst .o,.c,$@)
 
 %.o: %.S
 	$(ECHO) "  AS    $<"
 	$(AS) $(ASFLAGS) -o $@ $(subst .o,.S,$@)
+
+-include $(COBJ:.o=.d)
 
 $(BINPATH):
 	@$(MKDIR) $(BINPATH)
