--- a/wtmi/Makefile
+++ b/wtmi/Makefile
@@ -62,6 +62,7 @@ WTMI_DDR_LIB  = $(WTMI_DDR_PATH)/wtmi_ddr.a
 
 CLOCKSPRESET		?= CPU_800_DDR_800
 DDR_TOPOLOGY		?= 0
+DEBUG			?= 0
 
 ifeq ($(CLOCKSPRESET), CPU_600_DDR_600)
 		WTMI_CLOCK = 0
